fix collapse not closing bug

--- a/src/styles/antd-overrides/collapse.scss
+++ b/src/styles/antd-overrides/collapse.scss
@@ -73,14 +73,11 @@
   }
   .ant-collapse-content-box {
     border: 1px solid var(--stroke-tertiary);
-    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);
     padding: 0;
     width: 100%;
     background-color: var(--background-l0);
   }
-  .ant-collapse-content-box.dark {
-    box-shadow: 0px 8px 12px #000000;
-  }
+
   .ant-select-arrow {
     display: none;
   }
@@ -187,7 +184,7 @@
   z-index: 999;
   background-color: var(--background-l0);
   width: 180px;
-  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 8px 12px var(--boxShadow-primary);
 
   .ant-collapse-content-box {
     padding-top: 8px;
@@ -197,7 +194,6 @@
 
 .projects-filter-collapse.dark .ant-collapse-content {
   background-color: var(--background-l1);
-  box-shadow: 0px 8px 12px #000000;
 }
 
 // Trending window days selector on trending projects section of homepage
@@ -216,7 +212,7 @@
     background: var(--background-l0);
     z-index: 999;
     margin-left: 10px;
-    box-shadow: 0px 8px 12px rgb(0 0 0 / 10%);
+    box-shadow: 0px 8px 12px var(--boxShadow-primary);
     width: 114px;
   }
   .ant-collapse-content-box {
@@ -228,4 +224,8 @@
     padding: 10px 15px;
     cursor: pointer;
   }
+}
+
+.ant-collapse-content-hidden {
+  display: none !important;
 }
